# SPDX-License-Identifier: GPL-2.0-or-later
# SPDX-FileCopyrightText: Copyright 2023 KUNBUS GmbH

[package]
name = "eol-test-hdmi"
authors = ["KUNBUS GmbH <support@kunbus.com>"]
license = "GPL-2.0-or-later"
description = "Tool to test HDMI output by drawing on the framebuffer and playing audio over ALSA"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/RevolutionPi/eol-test-hdmi"

[profile.release]
strip = true

[dependencies]
alsa = "0.7.0"
anyhow = "1.0.71"
framebuffer = "0.3.1"
